--- a/package.json
+++ b/package.json
@@ -41,21 +41,21 @@
     "react-click-outside": "github:tj/react-click-outside",
     "react-copy-to-clipboard": "^4.1.0",
     "react-dom": "^15.1.0",
-    "react-relay": "^0.8.1",
+    "react-relay": "^0.9.1",
     "react-router": "^2.4.1",
     "react-router-relay": "^0.13.2",
     "react-tagsinput": "^3.7.0",
     "react-tether": "^0.5.2",
-    "react-tooltip": "^2.0.2",
+    "react-tooltip": "^3.0.8",
     "react-twitter-widgets": "^0.2.4",
-    "smooch": "^2.5.1"
+    "smooch": "^3.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-eslint": "^6.0.4",
-    "babel-jest": "^12.1.0",
+    "babel-jest": "^13.0.0",
     "babel-loader": "^6.2.4",
-    "babel-plugin-react-relay": "^0.8.1",
+    "babel-plugin-react-relay": "^0.9.0",
     "babel-plugin-transform-react-constant-elements": "^6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
     "babel-plugin-transform-runtime": "^6.9.0",
@@ -66,7 +66,7 @@
     "babel-runtime": "^6.9.0",
     "css-loader": "^0.23.1",
     "cssnano": "^3.6.2",
-    "eslint": "2.10.2",
+    "eslint": "2.13.1",
     "eslint-config-standard": "^5.3.1",
     "eslint-config-standard-react": "^2.4.0",
     "eslint-loader": "^1.3.0",
@@ -75,14 +75,15 @@
     "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^1.3.2",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.17.0",
-    "jest-cli": "^12.1.0",
+    "imports-loader": "^0.6.5",
+    "jest-cli": "^13.0.0",
     "json-loader": "^0.5.4",
     "node-sass": "^3.7.0",
     "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "svgo-loader": "^1.1.0",
     "ts-loader": "^0.8.2",
