Introduces project and model name validator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "./src/utils/cookiestore.ts",
     "./src/utils/graphql.ts",
     "./src/utils/location.ts",
+    "./src/utils/nameValidator.ts",
     "./src/utils/polyfils.ts",
     "./src/utils/relay.ts",
     "./src/views/models/utils.ts",
@@ -30,9 +31,9 @@
     "./src/components/Loading/Loading.tsx",
     "./src/components/ScrollBox/ScrollBox.tsx",
     "./src/components/ToggleButton/ToggleButton.tsx",
+    "./src/views/account/ResetPasswordView/ResetPasswordView.tsx",
     "./src/views/ActionsView/ActionRow.tsx",
     "./src/views/ActionsView/ActionsView.tsx",
-    "./src/views/account/ResetPasswordView/ResetPasswordView.tsx",
     "./src/views/models/BrowserView/Cell.tsx",
     "./src/views/models/BrowserView/CheckboxCell.tsx",
     "./src/views/models/StructureView/FieldPopup.tsx",
