--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "comma-dangle": [2, "always-multiline"],
     "space-infix-ops": 0,
     "max-len": [2, 120, 2],
+    "jsx-quotes": ["error", "prefer-single"],
     "react/jsx-no-bind": [1, {
       "allowArrowFunctions": true
     }]
