--- a/package.json
+++ b/package.json
@@ -29,70 +29,70 @@
   "dependencies": {
     "calculate-size": "^0.2.0",
     "classnames": "^2.2.5",
-    "graphiql": "^0.6.6",
-    "js-cookie": "^2.1.1",
+    "graphiql": "^0.7.3",
+    "js-cookie": "^2.1.2",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.4.0",
     "map-props": "^1.0.0",
-    "moment": "^2.13.0",
-    "normalize.css": "^4.1.1",
-    "react": "^15.1.0",
-    "react-addons-pure-render-mixin": "^15.1.0",
+    "moment": "^2.14.1",
+    "normalize.css": "^4.2.0",
+    "react": "^15.2.1",
+    "react-addons-pure-render-mixin": "^15.2.1",
     "react-click-outside": "github:tj/react-click-outside",
-    "react-copy-to-clipboard": "^4.1.0",
-    "react-dom": "^15.1.0",
-    "react-relay": "^0.9.1",
-    "react-router": "^2.4.1",
-    "react-router-relay": "^0.13.2",
-    "react-tagsinput": "^3.7.0",
+    "react-copy-to-clipboard": "^4.2.1",
+    "react-dom": "^15.2.1",
+    "react-relay": "^0.9.2",
+    "react-router": "^2.5.2",
+    "react-router-relay": "^0.13.3",
+    "react-tagsinput": "^3.11.0",
     "react-tether": "^0.5.2",
-    "react-tooltip": "^3.0.8",
+    "react-tooltip": "^3.0.13",
     "react-twitter-widgets": "^0.2.4",
-    "smooch": "^3.1.2"
+    "smooch": "^3.1.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-eslint": "^6.0.4",
-    "babel-jest": "^13.0.0",
+    "babel-cli": "^6.10.1",
+    "babel-eslint": "^6.1.2",
+    "babel-jest": "^13.2.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-relay": "^0.9.0",
-    "babel-plugin-transform-react-constant-elements": "^6.8.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.9.0",
+    "babel-runtime": "^6.9.2",
     "css-loader": "^0.23.1",
-    "cssnano": "^3.6.2",
-    "eslint": "2.13.1",
-    "eslint-config-standard": "^5.3.1",
-    "eslint-config-standard-react": "^2.4.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-react": "^5.1.1",
-    "eslint-plugin-standard": "^1.3.2",
+    "cssnano": "^3.7.3",
+    "eslint": "3.0.1",
+    "eslint-config-standard": "^6.0.0-beta.0",
+    "eslint-config-standard-react": "^3.0.0",
+    "eslint-loader": "^1.4.1",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-promise": "^2.0.0",
+    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.17.0",
+    "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
-    "jest-cli": "^13.0.0",
+    "jest-cli": "^13.2.3",
     "json-loader": "^0.5.4",
     "node-noop": "^1.0.0",
-    "node-sass": "^3.7.0",
+    "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "svgo-loader": "^1.1.0",
     "ts-loader": "^0.8.2",
-    "tslint": "^3.10.2",
-    "tslint-config-standard": "^1.0.0",
-    "tslint-loader": "^2.1.4",
+    "tslint": "^3.13.0",
+    "tslint-config-standard": "^1.3.0",
+    "tslint-loader": "^2.1.5",
     "typescript": "^1.9.0-dev.20160520-1.0",
-    "typings": "^1.0.4",
+    "typings": "^1.3.1",
     "url-loader": "^0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "^1.14.1"
