--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-tooltip": "^3.0.13",
     "react-twitter-widgets": "^0.2.4",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "smooch": "^3.1.4"
   },
   "devDependencies": {
