--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "./src/mutations/AddActionMutation.ts",
     "./src/mutations/ResetPasswordMutation.ts",
     "./src/mutations/UpdateActionMutation.ts",
+    "./src/mutations/AddPermissionMutation.ts",
+    "./src/mutations/UpdatePermissionMutation.ts",
+    "./src/mutations/DeletePermissionMutation.ts",
     "./src/types/types.ts",
     "./src/utils/classnames.ts",
     "./src/utils/cookiestore.ts",
@@ -39,7 +42,8 @@
     "./src/views/models/BrowserView/Cell.tsx",
     "./src/views/models/BrowserView/CheckboxCell.tsx",
     "./src/views/models/StructureView/FieldPopup.tsx",
-    "./src/views/models/StructureView/PermissionsLayover.tsx",
+    "./src/views/models/StructureView/Permissions.tsx",
+    "./src/views/models/StructureView/PermissionRow.tsx",
     "./src/views/models/StructureView/PermissionType.tsx",
     "./src/views/models/StructureView/TypeSelection.tsx",
     "./typings/globals/js-cookie/index.d.ts",
