--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "map-props": "^1.0.0",
     "moment": "^2.14.1",
     "normalize.css": "^4.2.0",
+    "rc-tooltip": "^3.4.2",
     "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.2.1",
     "react-click-outside": "github:tj/react-click-outside",
