rewrote browserview in typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     "./src/utils/nameValidator.ts",
     "./src/utils/polyfils.ts",
     "./src/utils/relay.ts",
+    "./src/utils/sideNavSyncer.ts",
     "./src/views/models/utils.ts",
     "./src/components/ApiLayover/ApiLayover.tsx",
     "./src/components/Help/Help.tsx",
@@ -44,6 +45,7 @@
     "./src/views/account/ResetPasswordView/ResetPasswordView.tsx",
     "./src/views/ActionsView/ActionRow.tsx",
     "./src/views/ActionsView/ActionsView.tsx",
+    "./src/views/models/BrowserView/BrowserView.tsx",
     "./src/views/models/BrowserView/Cell.tsx",
     "./src/views/models/BrowserView/CheckboxCell.tsx",
     "./src/views/models/StructureView/FieldRow.tsx",
