--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-addons-pure-render-mixin": "^15.2.1",
     "react-click-outside": "github:tj/react-click-outside",
     "react-copy-to-clipboard": "^4.2.1",
+    "react-datetime": "^2.4.0",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "react-relay": "^0.9.2",
