--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-copy-to-clipboard": "^4.2.1",
     "react-datetime": "^2.4.0",
     "react-dom": "^15.2.1",
+    "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "react-relay": "^0.9.2",
     "react-router": "^2.5.2",
