--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     "./src/utils/sideNavSyncer.ts",
     "./src/views/models/utils.ts",
     "./src/components/ApiLayover/ApiLayover.tsx",
+    "./src/components/ModelSelector/ModelSelector.tsx",
     "./src/components/Help/Help.tsx",
     "./src/components/Icon/Icon.tsx",
     "./src/components/Loading/Loading.tsx",
@@ -47,6 +48,7 @@
     "./src/views/ActionsView/ActionsView.tsx",
     "./src/views/models/BrowserView/BrowserView.tsx",
     "./src/views/models/BrowserView/Cell.tsx",
+    "./src/views/models/BrowserView/Row.tsx",
     "./src/views/models/BrowserView/CheckboxCell.tsx",
     "./src/views/models/BrowserView/HeaderCell.tsx",
     "./src/views/models/StructureView/FieldRow.tsx",
