--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     ]
   },
   "dependencies": {
+    "@types/js-cookie": "^2.0.27",
+    "@types/react": "^0.14.27",
+    "@types/react-addons-pure-render-mixin": "^0.14.13",
+    "@types/react-dom": "^0.14.14",
+    "@types/redux": "^3.3.26",
     "calculate-size": "^0.2.0",
     "classnames": "^2.2.5",
-    "graphiql": "^0.6.6",
+    "graphiql": "^0.7.3",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.2",
     "lokka": "^1.7.0",
@@ -48,20 +53,20 @@
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "react-relay": "^0.9.2",
-    "react-router": "^2.5.2",
+    "react-router": "^2.6.0",
     "react-router-relay": "^0.13.3",
-    "react-tagsinput": "^3.11.0",
+    "react-tagsinput": "^3.12.0",
     "react-tether": "^0.5.2",
-    "react-tooltip": "^3.0.13",
+    "react-tooltip": "^3.1.1",
     "react-twitter-widgets": "^0.2.4",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "smooch": "^3.1.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
+    "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
-    "babel-jest": "^13.2.2",
+    "babel-jest": "^14.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-relay": "^0.9.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
@@ -71,10 +76,10 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.9.2",
+    "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
-    "eslint": "3.0.1",
+    "eslint": "3.1.1",
     "eslint-config-standard": "^6.0.0-beta.0",
     "eslint-config-standard-react": "^3.0.0",
     "eslint-loader": "^1.4.1",
@@ -86,7 +91,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
-    "jest-cli": "^13.2.3",
+    "jest-cli": "^14.0.0",
     "json-loader": "^0.5.4",
     "node-noop": "^1.0.0",
     "node-sass": "^3.8.0",
@@ -99,8 +104,7 @@
     "tslint": "^3.13.0",
     "tslint-config-standard": "^1.3.0",
     "tslint-loader": "^2.1.5",
-    "typescript": "^1.9.0-dev.20160520-1.0",
-    "typings": "^1.3.1",
+    "typescript": "^2.1.0-dev.20160727",
     "url-loader": "^0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "^1.14.1"
