--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "smooch": "^3.1.4"
   },
   "devDependencies": {
+    "@types/jest": "^0.9.27",
     "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
     "babel-jest": "^14.0.0",
