--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-addons-pure-render-mixin": "^0.14.13",
     "@types/react-dom": "^0.14.14",
     "@types/redux": "^3.3.26",
+    "@types/whatwg-fetch": "0.0.27",
     "calculate-size": "^0.2.0",
     "classnames": "^2.2.5",
     "graphiql": "^0.7.3",
