--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production webpack --config webpack.config.build.js && cp -r static/* dist",
     "lint": "eslint src && tslint src/**/*.ts{,x}",
-    "start": "webpack-dev-server --hot --inline --progress --colors --history-api-fallback --host 0.0.0.0 --port 4000",
+    "start": "GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack-dev-server --hot --inline --progress --colors --history-api-fallback --host 0.0.0.0 --port 4000",
     "test": "npm run lint && jest",
     "test-watch": "jest --watch"
-  },
-  "react-relay-schema": {
-    "env": "DASHBOARD_SCHEMA_ENDPOINT"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/preprocessor.js",
@@ -70,7 +67,7 @@
     "babel-eslint": "^6.1.2",
     "babel-jest": "^14.0.0",
     "babel-loader": "^6.2.4",
-    "babel-plugin-react-relay": "^0.9.0",
+    "babel-plugin-react-relay": "^0.9.2-1",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
     "babel-plugin-transform-runtime": "^6.9.0",
