--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "rm -rf dist && NODE_ENV=production webpack --config webpack.config.build.js && cp -r static/* dist",
+    "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack --config webpack.config.build.js && cp -r static/* dist",
     "lint": "eslint src && tslint src/**/*.ts{,x}",
     "start": "GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack-dev-server --hot --inline --progress --colors --history-api-fallback --host 0.0.0.0 --port 4000",
     "test": "npm run lint && jest",
