--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
       "ts",
       "js"
     ],
+    "testPathIgnorePatterns": [
+      "/lib/"
+    ],
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules/react/",
       "<rootDir>/node_modules/react-dom/",
