--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack --config webpack.config.build.js && cp -r static/* dist",
-    "lint": "eslint src && tslint src/**/*.ts{,x}",
+    "lint": "tslint src/**/*.ts{,x}",
     "start": "GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack-dev-server --hot --inline --progress --colors --history-api-fallback --host 0.0.0.0 --port 4000",
     "test": "npm run lint && jest",
     "test-watch": "jest --watch"
@@ -68,7 +68,6 @@
   "devDependencies": {
     "@types/jest": "^0.9.27",
     "babel-cli": "^6.11.4",
-    "babel-eslint": "^6.1.2",
     "babel-jest": "^14.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-relay": "^0.9.2-1",
@@ -82,14 +81,6 @@
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
-    "eslint": "3.1.1",
-    "eslint-config-standard": "^6.0.0-beta.0",
-    "eslint-config-standard-react": "^3.0.0",
-    "eslint-loader": "^1.4.1",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-promise": "^2.0.0",
-    "eslint-plugin-react": "^5.2.2",
-    "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
