--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack --config webpack.config.build.js && cp -r static/* dist",
     "lint": "tslint src/**/*.ts{,x}",
-    "start": "GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack-dev-server --hot --inline --progress --colors --history-api-fallback --host 0.0.0.0 --port 4000",
+    "start": "GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack-dev-server --hot --inline --progress --history-api-fallback --host 0.0.0.0 --port 4000",
     "test": "npm run lint && jest",
     "test-watch": "jest --watch"
   },
@@ -56,7 +56,7 @@
     "react-redux": "^4.4.5",
     "react-relay": "^0.9.2",
     "react-router": "^2.6.0",
-    "react-router-relay": "^0.13.3",
+    "react-router-relay": "^0.13.4",
     "react-tagsinput": "^3.12.0",
     "react-tether": "^0.5.2",
     "react-tooltip": "^3.1.1",
@@ -81,7 +81,7 @@
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
     "cssnano": "^3.7.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
@@ -95,12 +95,12 @@
     "style-loader": "^0.13.1",
     "svgo-loader": "^1.1.0",
     "ts-loader": "^0.8.2",
-    "tslint": "^3.13.0",
+    "tslint": "^3.14.0-dev.1",
     "tslint-config-standard": "^1.3.0",
     "tslint-loader": "^2.1.5",
     "typescript": "^2.1.0-dev.20160727",
     "url-loader": "^0.5.7",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^2.1.0-beta.20",
+    "webpack-dev-server": "^2.1.0-beta.0"
   }
 }
