--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack --config webpack.config.build.js && cp -r static/* dist",
+    "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack --config webpack.config.build.js && cp -r static/* dist",
     "lint": "tslint src/**/*.ts{,x}",
-    "start": "GRAPHQL_ENDPOINT=$SYSTEM_GRAPHQL_ENDPOINT webpack-dev-server --hot --inline --progress --history-api-fallback --host 0.0.0.0 --port 4000",
+    "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --inline --progress --history-api-fallback --host 0.0.0.0 --port 4000",
     "test": "npm run lint && jest",
     "test-watch": "jest --watch"
   },
