--- a/graphql.config.json
+++ b/graphql.config.json
@@ -1,12 +1,8 @@
 {
   "schema": {
     "request": {
-      "url" : "http://localhost:60000/api/schema.json",
+      "url" : "http://localhost:60000/system/schema.json",
       "method" : "GET"
     }
-  },
-  "endpoints": [{
-    "name": "System API",
-    "url": "http://localhost:60000/api"
-  }]
+  }
 }
