--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-copy-to-clipboard": "^4.2.1",
     "react-datetime": "^2.4.0",
     "react-dom": "^15.2.1",
+    "react-helmet": "^3.1.0",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "react-relay": "^0.9.2",
