--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-relay": "^0.9.2",
     "react-router": "^2.6.0",
     "react-router-relay": "^0.13.4",
+    "react-safe-promise": "^0.1.1",
     "react-tagsinput": "^3.12.0",
     "react-tether": "^0.5.2",
     "react-tooltip": "^3.1.1",
