--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rc-tooltip": "^3.4.2",
     "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.2.1",
+    "react-addons-shallow-compare": "^15.3.1",
     "react-autocomplete": "^1.0.1",
     "react-click-outside": "github:tj/react-click-outside",
     "react-copy-to-clipboard": "^4.2.1",
@@ -63,6 +64,7 @@
     "react-toggle-button": "^2.1.0",
     "react-tooltip": "^3.1.1",
     "react-twitter-widgets": "^0.2.4",
+    "react-virtualized": "^7.22.1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "smooch": "^3.1.4"
