--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^0.14.14",
     "@types/redux": "^3.3.26",
     "@types/whatwg-fetch": "0.0.27",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
     "calculate-size": "^0.2.0",
     "classnames": "^2.2.5",
     "graphiql": "^0.7.3",
