--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack --config webpack.config.build.js && cp -r static/* dist",
-    "deploy": "npm run build && surge -d $SURGE_DOMAIN dist",
+    "deploy": "npm run build && cp dist/index.html dist/200.html && surge -d $SURGE_DOMAIN dist",
     "lint": "tslint src/**/*.ts{,x}",
     "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --inline --progress --history-api-fallback --host 0.0.0.0 --port 4000",
     "test": "npm run lint && jest",
