--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-datetime": "^2.4.0",
     "react-dom": "^15.2.1",
     "react-file-input": "^0.2.5",
+    "react-file-reader-input": "^1.1.0",
     "react-helmet": "^3.1.0",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
