--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "devDependencies": {
     "@types/jest": "^0.9.27",
+    "awesome-typescript-loader": "^2.2.4",
     "babel-cli": "^6.11.4",
     "babel-jest": "^14.0.0",
     "babel-loader": "^6.2.4",
@@ -103,13 +104,12 @@
     "style-loader": "^0.13.1",
     "surge": "^0.18.0",
     "svgo-loader": "^1.1.0",
-    "ts-loader": "^0.8.2",
     "tslint": "^3.14.0-dev.1",
     "tslint-config-standard": "^1.3.0",
     "tslint-loader": "^2.1.5",
     "typescript": "^2.1.0-dev.20160727",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.20",
+    "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.0"
   }
 }
