--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack --config webpack.config.build.js && cp -r static/* dist",
-    "deploy": "npm run build && cp dist/index.html dist/200.html && surge -d $SURGE_DOMAIN dist",
+    "deploy": "npm run build && cp dist/index.html dist/200.html && netlify deploy -p dist -s $NETLIFY_ID -t $NETLIFY_TOKEN",
     "lint": "tslint src/**/*.ts{,x}",
     "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --inline --progress --history-api-fallback --host 0.0.0.0 --port 4000",
     "test": "npm run lint && jest",
@@ -94,13 +94,13 @@
     "html-webpack-plugin": "^2.22.0",
     "jest-cli": "^14.0.0",
     "json-loader": "^0.5.4",
+    "netlify-cli": "^1.0.3",
     "node-noop": "^1.0.0",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "surge": "^0.18.0",
     "svgo-loader": "^1.1.0",
     "tslint": "^3.14.0-dev.1",
     "tslint-config-standard": "^1.3.0",
