--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^0.14.34",
     "@types/react-addons-pure-render-mixin": "^0.14.13",
     "@types/react-dom": "^0.14.14",
+    "@types/react-router": "^2.0.36",
     "@types/redux": "^3.3.26",
     "@types/whatwg-fetch": "0.0.27",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
