--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-router": "^2.0.36",
     "@types/whatwg-fetch": "0.0.27",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "bluebird": "^3.4.6",
     "calculate-size": "^0.2.0",
     "classnames": "^2.2.5",
     "cookiestore": "^1.0.3",
