--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "@types/bluebird": "^3.0.35",
     "@types/cuid": "0.0.30",
     "@types/node": "^6.0.31",
     "@types/react": "^0.14.34",
