--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@types/bluebird": "^3.0.35",
+    "@types/classnames": "^0.0.31",
     "@types/cuid": "0.0.30",
     "@types/history": "^2.0.39",
     "@types/node": "^6.0.31",
