--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/cuid": "0.0.30",
     "@types/history": "^2.0.39",
     "@types/node": "^6.0.31",
-    "@types/react": "^0.14.34",
+    "@types/react": "0.14.40",
     "@types/react-addons-pure-render-mixin": "^0.14.13",
     "@types/react-dom": "^0.14.14",
     "@types/react-router": "^2.0.36",
@@ -85,7 +85,7 @@
     "redux": "^3.5.2",
     "redux-actions": "^0.12.0",
     "redux-thunk": "^2.1.0",
-    "styled-components": "^1.0.5",
+    "styled-components": "1.0.5",
     "tachyons": "^4.5.2"
   },
   "devDependencies": {
@@ -129,7 +129,7 @@
     "tslint": "^3.14.0-dev.1",
     "tslint-config-standard": "^1.3.0",
     "tslint-loader": "^2.1.5",
-    "typescript": "^2.1.0-dev.20160727",
+    "typescript": "2.1.0-dev.20161014",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.0"
