--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "cookiestore": "^1.0.3",
     "cuid": "^1.3.8",
     "drumstick": "^1.0.5",
-    "graphcool-styles": "^0.0.16",
+    "graphcool-styles": "^0.0.29",
     "graphiql": "^0.7.3",
     "immutable": "^3.8.1",
     "lokka": "^1.7.0",
@@ -84,6 +84,7 @@
     "react-virtualized": "^7.22.1",
     "redux": "^3.5.2",
     "redux-actions": "^0.12.0",
+    "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
     "styled-components": "1.0.5",
     "tachyons": "^4.5.2"
