--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "npm run lint && jest",
     "test-watch": "jest --watch"
   },
+  "pre-commit": [
+    "test"
+  ],
   "jest": {
     "scriptPreprocessor": "<rootDir>/preprocessor.js",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
@@ -71,6 +74,7 @@
     "react-datetime": "^2.4.0",
     "react-dom": "^15.2.1",
     "react-helmet": "^3.1.0",
+    "react-input-enhancements": "^0.5.3",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "react-relay": "^0.9.3",
@@ -120,6 +124,7 @@
     "node-noop": "^1.0.0",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
+    "pre-commit": "^1.1.3",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.3.2",
     "react-test-renderer": "^15.3.2",
