--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "graphcool-styles": "^0.0.29",
     "graphiql": "^0.7.3",
     "immutable": "^3.8.1",
+    "lodash.pick": "^4.4.0",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.4.0",
     "map-props": "^1.0.0",
