--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-dom": "^0.14.14",
     "@types/react-router": "^2.0.36",
     "@types/whatwg-fetch": "0.0.27",
+    "auth0-lock": "^10.5.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "bluebird": "^3.4.6",
     "calculate-size": "^0.2.0",
