--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ deployment:
             BACKEND_ADDR: $BACKEND_MASTER_ADDR
             AUTH0_DOMAIN: graphcool-customers.auth0.com
             AUTH0_CLIENT_ID: Is37aESHkLDR5PQa48ZiKZtm8gVNiUWw
-            NETLIFY_ID: dashboard-graph-cool
+            NETLIFY_ID: console-graph-cool
   dev:
     branch: dev
     commands:
@@ -29,7 +29,7 @@ deployment:
             BACKEND_ADDR: $BACKEND_DEV_ADDR
             AUTH0_DOMAIN: graphcool-customers-dev.auth0.com
             AUTH0_CLIENT_ID: 2q6oEEGaIPv45R7v60ZMnkfAgY49pNnm
-            NETLIFY_ID: dev-dashboard-graph-cool
+            NETLIFY_ID: dev-console-graph-cool
   default:
     branch: /^(?!(dev|master)$).*/
     commands:
