--- a/circle.yml
+++ b/circle.yml
@@ -36,3 +36,6 @@ deployment:
       - npm run build:
           environment:
             BACKEND_ADDR: $BACKEND_DEV_ADDR
+            AUTH0_DOMAIN: graphcool-customers-dev.auth0.com
+            AUTH0_CLIENT_ID: 2q6oEEGaIPv45R7v60ZMnkfAgY49pNnm
+            NETLIFY_ID: dev-console-graph-cool
