--- a/circle.yml
+++ b/circle.yml
@@ -35,6 +35,6 @@ deployment:
     commands:
       - npm run build:
           environment:
-            BACKEND_ADDR: dev.api.graph.cool
+            BACKEND_ADDR: https://dev.api.graph.cool
             AUTH0_DOMAIN: graphcool-customers-dev.auth0.com
             AUTH0_CLIENT_ID: 2q6oEEGaIPv45R7v60ZMnkfAgY49pNnm
