--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ deployment:
     commands:
       - npm run deploy:
           environment:
-            BACKEND_ADDR: $BACKEND_MASTER_ADDR
+            BACKEND_ADDR: https://api.graph.cool
             AUTH0_DOMAIN: graphcool-customers.auth0.com
             AUTH0_CLIENT_ID: Is37aESHkLDR5PQa48ZiKZtm8gVNiUWw
             NETLIFY_ID: console-graph-cool
@@ -26,7 +26,7 @@ deployment:
     commands:
       - npm run deploy:
           environment:
-            BACKEND_ADDR: $BACKEND_DEV_ADDR
+            BACKEND_ADDR: https://dev.api.graph.cool
             AUTH0_DOMAIN: graphcool-customers-dev.auth0.com
             AUTH0_CLIENT_ID: 2q6oEEGaIPv45R7v60ZMnkfAgY49pNnm
             NETLIFY_ID: dev-console-graph-cool
