--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "0.14.40",
     "@types/react-addons-pure-render-mixin": "^0.14.13",
     "@types/react-dom": "^0.14.14",
+    "@types/react-ga": "^1.4.5",
     "@types/react-router": "^2.0.36",
     "@types/whatwg-fetch": "0.0.27",
     "auth0-lock": "^10.5.0",
@@ -58,6 +59,7 @@
     "cookiestore": "^1.0.3",
     "cuid": "^1.3.8",
     "drumstick": "^1.0.5",
+    "graphcool-metrics": "^0.0.2",
     "graphcool-styles": "0.0.46",
     "graphiql": "^0.7.3",
     "immutable": "^3.8.1",
@@ -78,6 +80,7 @@
     "react-copy-to-clipboard": "^4.2.1",
     "react-datetime": "^2.4.0",
     "react-dom": "^15.2.1",
+    "react-ga": "^2.1.2",
     "react-helmet": "^3.1.0",
     "react-input-enhancements": "github:timsuchanek/react-input-enhancements#build",
     "react-notification-system": "^0.2.7",
