--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "bluebird": "^3.4.6",
     "calculate-size": "^0.2.0",
     "classnames": "^2.2.5",
+    "codemirror": "^5.20.2",
     "cookiestore": "^1.0.3",
     "cuid": "^1.3.8",
     "drumstick": "^1.0.5",
@@ -75,6 +76,7 @@
     "react-addons-shallow-compare": "^15.3.1",
     "react-autocomplete": "^1.0.1",
     "react-click-outside": "github:tj/react-click-outside",
+    "react-codemirror": "^0.2.6",
     "react-copy-to-clipboard": "^4.2.1",
     "react-datetime": "^2.4.0",
     "react-dom": "^15.2.1",
