--- a/circle.yml
+++ b/circle.yml
@@ -4,9 +4,7 @@ machine:
 
 dependencies:
   override:
-    - npm install -g yarn
-    - yarn cache clean
-    - yarn install
+    - npm install
 
 test:
   override:
