--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "cookiestore": "^1.0.3",
     "cuid": "^1.3.8",
     "drumstick": "^1.0.8",
-    "graphcool-metrics": "0.0.10",
+    "graphcool-metrics": "^0.1.0",
     "graphcool-styles": "^0.0.55",
     "graphiql": "^0.7.3",
     "immutable": "^3.8.1",
