--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^6.0.31",
     "@types/react": "0.14.40",
     "@types/react-addons-pure-render-mixin": "^0.14.13",
+    "@types/react-codemirror": "^0.2.5",
     "@types/react-dom": "^0.14.14",
     "@types/react-router": "^2.0.36",
     "@types/whatwg-fetch": "0.0.27",
