--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "cookiestore": "^1.0.3",
     "cuid": "^1.3.8",
     "drumstick": "^1.0.8",
-    "graphcool-metrics": "^0.2.0",
+    "graphcool-metrics": "0.2.1",
     "graphcool-styles": "^0.0.55",
     "graphiql": "^0.8.0",
     "immutable": "^3.8.1",
