--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "cuid": "^1.3.8",
     "drumstick": "^1.0.8",
     "graphcool-metrics": "0.2.1",
-    "graphcool-styles": "^0.0.55",
+    "graphcool-styles": "0.0.66",
     "graphiql": "^0.8.0",
     "immutable": "^3.8.1",
     "lodash.isequal": "^4.4.0",
