--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/classnames": "^0.0.32",
     "@types/cuid": "0.0.30",
     "@types/history": "^2.0.39",
+    "@types/lodash": "^4.14.43",
     "@types/node": "^6.0.31",
     "@types/react": "0.14.40",
     "@types/react-addons-pure-render-mixin": "^0.14.13",
@@ -61,12 +62,10 @@
     "cuid": "^1.3.8",
     "drumstick": "^1.0.8",
     "graphcool-metrics": "0.2.1",
-    "graphcool-styles": "0.0.66",
+    "graphcool-styles": "0.0.69",
     "graphiql": "^0.8.0",
     "immutable": "^3.8.1",
-    "lodash.isequal": "^4.4.0",
-    "lodash.pick": "^4.4.0",
-    "lodash.throttle": "^4.1.1",
+    "lodash": "^4.17.2",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.4.0",
     "map-props": "^1.0.0",
