--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "redux-actions": "^0.12.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
+    "smooch": "^3.9.3",
     "styled-components": "^1.1.1",
     "tachyons": "^4.5.2"
   },
