Upgrade awesome-ts loader, fix ts errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,9 @@
     "./src/**/*.ts",
     "./src/**/*.tsx",
     "./custom.d.ts"
-  ]
+  ],
+  "awesomeTypescriptLoaderOptions": {
+    "useCache": true,
+    "useBabel": true
+  }
 }
