--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/bluebird": "^3.0.35",
     "@types/classnames": "^0.0.32",
     "@types/cuid": "0.0.30",
+    "@types/enzyme": "^2.7.1",
     "@types/history": "^2.0.39",
     "@types/lodash": "^4.14.43",
     "@types/node": "^6.0.31",
@@ -52,13 +53,15 @@
     "@types/react-dom": "^0.14.14",
     "@types/react-ga": "^1.4.5",
     "@types/react-router": "^2.0.36",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "2.1.32",
     "@types/whatwg-fetch": "^0.0.32",
     "auth0-lock": "^10.5.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "bluebird": "^3.4.6",
     "calculate-size": "^0.2.0",
     "classnames": "^2.2.5",
-    "cookiestore": "^1.0.3",
+    "cookiestore": "1.0.4",
     "cuid": "^1.3.8",
     "drumstick": "^1.0.8",
     "graphcool-metrics": "0.2.3",
@@ -95,7 +98,7 @@
     "react-tooltip": "^3.1.1",
     "react-twitter-widgets": "^0.2.4",
     "react-virtualized": "^7.22.1",
-    "redux": "^3.5.2",
+    "redux": "3.6.0",
     "redux-actions": "^0.12.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
@@ -106,7 +109,7 @@
   "devDependencies": {
     "@types/jest": "^15.1.32",
     "@types/react-addons-test-utils": "^0.14.15",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "3.0.0-beta.17",
     "babel-cli": "^6.11.4",
     "babel-jest": "^14.0.0",
     "babel-loader": "^6.2.4",
