--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --inline --progress --history-api-fallback --host 0.0.0.0 --port 4000",
     "test": "npm run lint && jest",
     "test-quick": "jest",
-    "test-watch": "jest --watch"
+    "test-watch": "jest --watch",
+    "dll": "webpack --config dll.webpack.config.js"
   },
   "pre-commit": [
     "test-quick"
