--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack --config webpack.config.build.js && cp -r static/* dist",
-    "deploy": "npm run build && cp dist/index.html dist/200.html && netlify deploy -p dist -s $NETLIFY_ID -t $NETLIFY_TOKEN",
+    "deploy": "npm run build && cp dll/vendor.bundle.js dist/vendor.bundle.js && cp dist/index.html dist/200.html && netlify deploy -p dist -s $NETLIFY_ID -t $NETLIFY_TOKEN",
     "lint": "tslint \"src/**/*.ts{,x}\"",
-    "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --inline --progress --history-api-fallback --host 0.0.0.0 --port 4000",
+    "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --inline --progress --history-api-fallback --host 0.0.0.0 --port 4000 --content-base dll/",
     "test": "npm run lint && jest",
     "test-quick": "jest",
     "test-watch": "jest --watch",
@@ -61,6 +61,7 @@
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "bluebird": "^3.4.6",
     "calculate-size": "^0.2.0",
+    "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "cookiestore": "1.0.4",
     "cuid": "^1.3.8",
