--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/history": "^2.0.39",
     "@types/lodash": "^4.14.43",
     "@types/node": "^6.0.31",
-    "@types/react": "0.14.40",
+    "@types/react": "git+https://github.com/timsuchanek/-types-react",
     "@types/react-addons-pure-render-mixin": "^0.14.13",
     "@types/react-codemirror": "^0.2.5",
     "@types/react-dom": "^0.14.14",
@@ -76,6 +76,10 @@
     "map-props": "^1.0.0",
     "moment": "^2.14.1",
     "normalize.css": "^4.2.0",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-inherit": "^4.0.3",
+    "postcss-inject": "^1.0.1",
+    "postcss-simple-vars": "^3.0.0",
     "rc-tooltip": "^3.4.2",
     "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.2.1",
@@ -89,6 +93,7 @@
     "react-ga": "^2.1.2",
     "react-helmet": "^3.1.0",
     "react-input-enhancements": "git+https://github.com/timsuchanek/react-input-enhancements#build",
+    "react-modal": "^1.6.5",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "react-relay": "^0.9.3",
@@ -106,6 +111,8 @@
     "redux-thunk": "^2.1.0",
     "smooch": "^3.9.3",
     "styled-components": "^1.1.1",
+    "styled-jsx": "git+https://github.com/timsuchanek/styled-jsx#build",
+    "styled-jsx-postcss": "^0.1.5",
     "tachyons": "^4.5.2"
   },
   "devDependencies": {
