--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
     "stage-0"
   ],
   "plugins": [
+    "styled-jsx-postcss/babel",
     "transform-runtime",
     "react-relay",
     "transform-async-to-generator"
