--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "smooch": "^3.9.3",
     "styled-components": "^1.1.1",
     "styled-jsx": "git+https://github.com/timsuchanek/styled-jsx#build",
-    "styled-jsx-postcss": "^0.1.5",
+    "styled-jsx-postcss": "git+https://github.com/timsuchanek/styled-jsx-postcss#build",
     "tachyons": "^4.5.2"
   },
   "devDependencies": {
