--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/whatwg-fetch": "^0.0.32",
     "auth0-lock": "^10.5.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-preset-stage-3": "^6.22.0",
     "bluebird": "^3.4.6",
     "calculate-size": "^0.2.0",
     "cheerio": "^0.22.0",
@@ -67,8 +68,9 @@
     "cookiestore": "1.0.4",
     "cuid": "^1.3.8",
     "drumstick": "^1.0.8",
+    "graphcool-graphiql": "1.2.2",
     "graphcool-metrics": "0.2.3",
-    "graphcool-styles": "0.0.73",
+    "graphcool-styles": "0.0.96",
     "graphiql": "^0.8.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.2",
@@ -78,7 +80,7 @@
     "moment": "^2.14.1",
     "normalize.css": "^4.2.0",
     "postcss-cssnext": "^2.9.0",
-    "postcss-inherit": "^4.0.3",
+    "postcss-inherit": "git+https://github.com/timsuchanek/postcss-inherit#build",
     "postcss-inject": "^1.0.1",
     "postcss-simple-vars": "^3.0.0",
     "rc-tooltip": "^3.4.2",
