--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "classnames": "^2.2.5",
     "cookiestore": "1.0.4",
     "cuid": "^1.3.8",
+    "downloadjs": "^1.4.7",
     "drumstick": "^1.0.8",
     "graphcool-graphiql": "1.2.2",
     "graphcool-metrics": "0.2.3",
