--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "sourceMap": true,
     "target": "es2015",
     "outDir": "lib",
-    "moduleResolution": "node",
-    "allowJs": true
+    "moduleResolution": "node"
   },
   "exclude": [
     "node_modules",
