--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "cuid": "^1.3.8",
     "downloadjs": "^1.4.7",
     "drumstick": "^1.0.8",
-    "graphcool-graphiql": "^1.2.7",
+    "graphcool-graphiql": "1.2.8",
     "graphcool-metrics": "0.2.3",
     "graphcool-styles": "0.0.98",
     "graphiql": "^0.8.0",
