--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/cuid": "0.0.30",
     "@types/enzyme": "^2.7.1",
     "@types/history": "^2.0.39",
-    "@types/lodash": "^4.14.43",
+    "@types/lodash": "4.14.43",
     "@types/node": "^6.0.31",
     "@types/react": "git+https://github.com/timsuchanek/-types-react",
     "@types/react-addons-pure-render-mixin": "^0.14.13",
