--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
     "tslint": "^4.0.1",
     "tslint-config-standard": "^2.0.0",
     "tslint-loader": "^3.0.0",
-    "typescript": "2.1.0-dev.20161014",
+    "typescript": "2.1.5",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.0"
