--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "map-props": "^1.0.0",
     "moment": "^2.14.1",
     "normalize.css": "^4.2.0",
+    "offline-plugin": "^4.6.1",
     "postcss-cssnext": "^2.9.0",
     "postcss-inherit": "git+https://github.com/timsuchanek/postcss-inherit#build3",
     "postcss-inject": "^1.0.1",
