--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "codemirror": "5.22.2",
+    "codemirror-graphql": "^0.6.3",
     "cookiestore": "^1.1.0",
     "cuid": "^1.3.8",
     "downloadjs": "^1.4.7",
