--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "styled-components": "^1.1.1",
     "styled-jsx": "0.5.2",
     "styled-jsx-postcss": "git+https://github.com/timsuchanek/styled-jsx-postcss#build",
-    "tachyons": "^4.5.2"
+    "tachyons": "^4.5.2",
+    "webpack-bundle-analyzer": "^2.3.1"
   },
   "devDependencies": {
     "@types/jest": "^15.1.32",
