--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-tooltip": "^3.1.1",
     "react-twitter-widgets": "^0.2.4",
     "react-virtualized": "^7.22.1",
+    "react-youtube": "^7.3.0",
     "redux": "3.6.0",
     "redux-actions": "^0.12.0",
     "redux-logger": "^2.7.0",
