--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
     "tslint-loader": "^3.0.0",
     "typescript": "2.1.5",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "webpack": "2.3.1",
+    "webpack-dev-server": "2.3.1"
   }
 }
