--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react-copy-to-clipboard": "^4.2.1",
     "react-datetime": "git+https://github.com/AaronAsAChimp/react-datetime#181-typings-fix",
     "react-dom": "^15.2.1",
+    "react-dropzone": "^3.12.2",
     "react-ga": "^2.1.2",
     "react-helmet": "^3.1.0",
     "react-input-enhancements": "git+https://github.com/timsuchanek/react-input-enhancements#build",
