wip schema editor

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "graphcool-graphiql": "1.5.5",
     "graphcool-metrics": "0.2.3",
     "graphcool-styles": "0.1.6",
-    "graphiql": "^0.8.0",
+    "graphiql": "0.10.1",
     "graphql-voyager": "git+https://github.com/timsuchanek/graphql-voyager#build3",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -83,6 +83,7 @@
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.4.0",
     "map-props": "^1.0.0",
+    "marked": "^0.3.6",
     "moment": "^2.14.1",
     "normalize.css": "^4.2.0",
     "offline-plugin": "^4.6.1",
