--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "styled-jsx": "0.5.2",
     "styled-jsx-postcss": "git+https://github.com/timsuchanek/styled-jsx-postcss#build3",
     "tachyons": "^4.5.2",
+    "tracekit": "^0.4.4",
     "webpack-bundle-analyzer": "^2.3.1"
   },
   "devDependencies": {
