--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "2.1.32",
     "@types/whatwg-fetch": "^0.0.32",
-    "auth0-lock": "^10.5.0",
+    "auth0-lock": "10.11.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-preset-stage-3": "^6.22.0",
     "bluebird": "^3.4.6",
