wip function popup

--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "postcss-inherit": "git+https://github.com/timsuchanek/postcss-inherit#build3",
     "postcss-inject": "^1.0.1",
     "postcss-simple-vars": "^3.0.0",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.10",
     "rc-tooltip": "^3.4.2",
     "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.2.1",
@@ -103,6 +103,7 @@
     "react-copy-to-clipboard": "^4.2.1",
     "react-datetime": "git+https://github.com/AaronAsAChimp/react-datetime#181-typings-fix",
     "react-dom": "^15.2.1",
+    "react-draggable": "^2.2.6",
     "react-dropzone": "^3.12.2",
     "react-ga": "^2.1.2",
     "react-helmet": "^3.1.0",
